[project]
name = "hems-echonet"
version = "0.1.0"
description = "Fetch and display Smart Cosmo ECHONET Lite values with pychonet"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pychonet>=2.6.18",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "pytest>=8.0.2",
    "pytest-asyncio>=0.23.5",
    "pytest-homeassistant-custom-component>=0.13.109",
]
